NAVIGATOR/platform/ingress_service.yaml
apiVersion: v1
kind: Service
metadata:
 name: ibacc-icn-ingress-svc
spec:
 ports:
   - name: http
     protocol: TCP
     port: 9080
     targetPort: 9080
   - name: https
     protocol: TCP
     port: 9443
     targetPort: 9443
 selector:
   app: ibm-dba-navigator
 type: ClusterIP
