NAVIGATOR/platform/ingress_icn.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dbamc-ingress
  annotations:
    # The NGINX ingress annotations contains a new prefix nginx.ingress.kubernetes.io.
    # To avoid breaking a running NGINX ingress controller, specify both new and old prefixes.
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.bluemix.net/sticky-cookie-services: "serviceName=ibacc-icn-ingress-svc name=icncookie expires=7300s path=/navigator hash=sha1"
spec:
  rules:
  - host: icp4a.content
    http:
      paths:
      - backend:
          serviceName: ibacc-icn-ingress-svc
          servicePort: 9080
        path: /navigator
      - backend:
          serviceName: ibacc-icn-ingress-svc
          servicePort: 9080
        path: /sync
  tls:
  - hosts:
    - icp4a.content
    secretName: icp4a
